Pag BMW and Tesla

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <title>Eagle's Car</title>
     </head>
     <body>
-<<<<<<< HEAD
         <!-- INICIO DO MENU DA PÁGINA -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
             <div class="container-fluid">
@@ -64,8 +63,7 @@
                     <img src="img/menu_pag/C2_TESLA_SLIDER.jpg" class="d-block w-100 img-fluid" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/menu_pag/C3_MERCEDES_SLIDER.jpg" class="d-block w-100 img-fluid" alt="...">
-=======
+
             <!-- INICIO DO MENU DA PÁGINA -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
                 <div class="container-fluid">
@@ -120,7 +118,6 @@
                     <div class="carousel-item">
                         <img src="img/menu_pag/C3_MERCEDES_SLIDER.jpg" class="d-block w-100 img-fluid" alt="..." style="background-size: cover">
                     </div>
->>>>>>> 1a0a104dca5124a20f80efb9047b77b2f0cb5fb7
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -163,13 +160,6 @@
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a href="mercedes.html">
-                                Mercedes
-                            </a>
-                        </h6>
-                    </div>
-                    <div class="col-md-2 mb-3">
-                        <h6 class="text-uppercase font-weight-bold">
                             <a href="tesla.html">
                                 Tesla
                             </a>
@@ -177,8 +167,22 @@
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a id="contato" href="contato.html">
+                            <a href="mercedes.html">
+                                Mercedes
+                            </a>
+                        </h6>
+                    </div>
+                    <div class="col-md-2 mb-3">
+                        <h6 class="text-uppercase font-weight-bold">
+                            <a id="contato" href="#contato">
                                 Contato
+                            </a>
+                        </h6>
+                    </div>
+                    <div class="col-md-2 mb-3">
+                        <h6 class="text-uppercase font-weight-bold">
+                            <a href="orcamento.html">
+                                Orçamento
                             </a>
                         </h6>
                     </div>
@@ -189,7 +193,7 @@
                         <p style="line-height: 1.7rem">
                             A Eagle's Car atende você com toda a satisfação e prazer, 
                             pois nós trabalhamos com qualidade de serviço, atendimento
-                            e suporte ao usuário. Dedicação total, para que você sair 
+                            e suporte ao usuário. Dedicação total, para que você sai 
                             com um carro que atenda as suas necessidades.
                         </p>
                     </div>
