--- a/bmw.html
+++ b/bmw.html
@@ -295,6 +295,8 @@
         </div>
                 
         <!-- FIM DO CATÁLAGO TODO -->
+
+        <!-- COMEÇO DO JUMBOTRON -->
         <br>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
@@ -302,6 +304,8 @@
               <p class="lead">Tudo que você precisa está aqui, performace, estilo e segurança.</p>
             </div>
           </div>
+        <!-- FIM DO JUMBOTRON -->
+        
         <!-- INICIO DO RODAPÉ -->
         <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
             <br>
