--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,6 @@
         <title>Eagle's Car</title>
     </head>
     <body>
-<<<<<<< HEAD
         <!-- INICIO DO MENU DA PÁGINA -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
             <div class="container-fluid">
@@ -53,7 +52,15 @@
             </div>
         </nav>
         <!-- FIM DO MENU DA PÁGINA -->
-        
+        <br>
+        <br>
+        <br>
+        <div class="container">
+        <p>Sla mano qualquer coisa asaeea</p>
+        </div>
+        <br>
+        <br>
+        <br>
         <!-- INICIO DO RODAPÉ -->
         <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
             <br>
