--- a/mercedes.html
+++ b/mercedes.html
@@ -51,13 +51,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/home/CL1.jpg" class="d-block w-100" alt="...">
+                    <img src="img/mercedes/cars/C7_SLIDER.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/home/CL2.jpg" class="d-block w-100" alt="...">
+                    <img src="img/mercedes/cars/C8_SLIDER.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/home/CL3.jpg" class="d-block w-100" alt="...">
+                    <img src="img/mercedes/cars/C9_SLIDER.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -74,27 +74,17 @@
             </a>
         </div>
         <!-- FIM DO SLIDER -->
+
         <!-- INICIO DOS CARDS DE PROMOÇÃO -->
-        <br>
-        <br>
-        <h1 id="title">
-            Veiculos em promoção
-        </h1>
-        <br>
-        <br>
         <div class="card-group">
             <div class="card">
-                <img src="img/bmw/cars/C1_CARD-CATALOGO.png" class="card-img-top" alt="...">
+                <img src="img/mercedes/cars/C1_CARD-CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
-                        BMW Série 1 Hatch
+                        CLA 200 ff
                     </h5>
                     <p class="card-text">
-                        BMW Série 1, um veículo ágil e compacto com uma aparência esportiva
-                        e moderna. A dianteira exibe um novo design, que inclui a grade em 
-                        forma de rim característica da BMW e os elegantes faróis LED. A 
-                        traseira apresenta os cativantes faróis em forma de L e o interior 
-                        ergonômico proporciona inúmeras possibilidades de organização. 
+                        Descubra o CLA 200 ff, coupé premium de quatro portas com design expressivo e vanguardista.
                     </p>
                     <p class="card-text">
                         <small class="text-muted">
@@ -104,69 +94,58 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/bmw/cars/C2_CARD-CATALOGO.png" class="card-img-top" alt="...">
+                <img src="img/mercedes/cars/C2_CARD-CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
-                        BMW Série 2 Active Tourer
+                        Classe C 180
                     </h5>
                     <p class="card-text">
-                        O BMW Série 2 Active Tourer comprova que as dimensões compactas,
-                        a funcionalidade e a diversidade podem ser perfeitamente combinadas
-                        em um design dinâmico. Esse veículo está preparado para enfrentar
-                        qualquer situação, quer sejam atividades esportivas ou no dia a dia.
+                        O novo Classe C 180 Avantgarde está ainda mais esportivo e tecnológico,
+                        combinando tecnologia inovadora, conforto extraordinário, visual atraente
+                        e eficiência notável, além de garantir uma experiência excepcional de 
+                        dirigibilidade.
                     </p>
                     <br>
                     <p class="card-text">
                         <small class="text-muted">
-                            A partir de R$ 171.950,00 à vista
+                            A partir de R$ 178.950,00
                         </small>
                     </p>
                 </div>
             </div>
             <div class="card">
-                <img src="img/bmw/cars/C3_CARD-CATALOGO.png" class="card-img-top" alt="...">
+                <img src="img/mercedes/cars/C3_CARD-CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
-                        BMW Série 3 Sedã
+                        GLA 200 ff Advance
                     </h5>
                     <p class="card-text">
-                        Nem bem caiu na estrada o novo BMW Série 3 já está deixando tudo para 
-                        trás, incluindo convenções e expectativas. Mais uma vez o ícone mostra 
-                        como reinventar a si mesmo. Afinal de contas, com a linguagem de design
-                        pioneira, ele representa o alvorecer de uma nova era. Impulsionando o
-                        verdadeiro sedã esportivo há motores ainda mais potentes and eficientes.
+                        As atualizações do GLA trazem ainda mais dinamismo à parte frontal do carro.
+                        Com um apelo esportivo e provocante do design frontal, fica evidenciado 
+                        que o veículo se destina a grandes aventuras.
                     </p>
                     <p class="card-text">
                         <small class="text-muted">
-                            A partir de R$ 219.950,00 à vista
+                            A partir de R$ 184.900
                         </small>
                     </p>
                 </div>
             </div>
         </div>
         <!-- FIM DOS CARDS DE PROMOÇÃO -->
-
+        <video loop autoplay controls width="100%">
+            <source src="img/mercedes/cars/VIDEO_MERCEDES.mp4">
+        </video>
         <!-- COMEÇO DO CATÁLAGO TODO -->
-        <br>
-        <br>
-        <h1 id="title">
-            Catálogo:
-        </h1>
-        <br>
-        <br>
         <div class="card-group">
             <div class="card">
-                <img src="img/bmw/cars/C1_CARD-CATALOGO.png" class="card-img-top" alt="...">
+                <img src="img/mercedes/cars/C1_CARD-CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
-                        BMW Série 1 Hatch
+                        CLA 200 ff
                     </h5>
                     <p class="card-text">
-                        BMW Série 1, um veículo ágil e compacto com uma aparência esportiva
-                        e moderna. A dianteira exibe um novo design, que inclui a grade em 
-                        forma de rim característica da BMW e os elegantes faróis LED. A 
-                        traseira apresenta os cativantes faróis em forma de L e o interior 
-                        ergonômico proporciona inúmeras possibilidades de organização. 
+                        Descubra o CLA 200 ff, coupé premium de quatro portas com design expressivo e vanguardista.
                     </p>
                     <p class="card-text">
                         <small class="text-muted">
@@ -176,16 +155,16 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/bmw/cars/C2_CARD-CATALOGO.png" class="card-img-top" alt="...">
+                <img src="img/mercedes/cars/C2_CARD-CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
-                        BMW Série 2 Active Tourer
+                        Classe C 180
                     </h5>
                     <p class="card-text">
-                        O BMW Série 2 Active Tourer comprova que as dimensões compactas,
-                        a funcionalidade e a diversidade podem ser perfeitamente combinadas
-                        em um design dinâmico. Esse veículo está preparado para enfrentar
-                        qualquer situação, quer sejam atividades esportivas ou no dia a dia.
+                        O novo Classe C 180 Avantgarde está ainda mais esportivo e tecnológico,
+                        combinando tecnologia inovadora, conforto extraordinário, visual atraente
+                        e eficiência notável, além de garantir uma experiência excepcional de 
+                        dirigibilidade.
                     </p>
                     <br>
                     <p class="card-text">
@@ -196,17 +175,15 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/bmw/cars/C3_CARD-CATALOGO.png" class="card-img-top" alt="...">
+                <img src="img/mercedes/cars/C3_CARD-CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
-                        BMW Série 3 Sedã
+                        GLA 200 ff Advance
                     </h5>
                     <p class="card-text">
-                        Nem bem caiu na estrada o novo BMW Série 3 já está deixando tudo para 
-                        trás, incluindo convenções e expectativas. Mais uma vez o ícone mostra 
-                        como reinventar a si mesmo. Afinal de contas, com a linguagem de design
-                        pioneira, ele representa o alvorecer de uma nova era. Impulsionando o
-                        verdadeiro sedã esportivo há motores ainda mais potentes and eficientes.
+                        As atualizações do GLA trazem ainda mais dinamismo à parte frontal do carro.
+                        Com um apelo esportivo e provocante do design frontal, fica evidenciado 
+                        que o veículo se destina a grandes aventuras.
                     </p>
                     <p class="card-text">
                         <small class="text-muted">
@@ -218,39 +195,36 @@
         </div>
         <div class="card-group">
             <div class="card">
-                <img src="img/bmw/cars/C4_CATALOGO.png" class="card-img-top" alt="...">
+                <img src="img/mercedes/cars/C4_CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
-                        BMW Série 4 Cabrio
+                        Classe A
                     </h5>
                     <p class="card-text">
-                        Com a capota rígida recolhida ou fechada, o BMW Série 4 Cabrio está 
-                        pronto para surpreender o mundo. O design esportivo atrai todos os 
-                        olhares. O motor equipado com tecnologias BMW TwinPower Turbo 
-                        intensificam a sensação de agilidade. Os recursos do BMW ConnectedDrive 
-                        elevam o nível de conforto e intensificam a experiência de condução 
-                        única proporcionada pelo BMW Série 4 Cabrio.
+                        Quer na hora do rush, em longas viagens noturnas ou em trajetos desconhecidos,
+                         o seu novo Classe A alivia você principalmente em situações estressantes. 
+                         Por trás disso está um conceito que torna excepcional e mais segura cada 
+                         viagem em um Mercedes-Benz: o Mercedes-Benz Intelligent Drive. Pois o tempo
+                          que você passa ao volante é tempo de qualidade. Tempo para relaxar. 
                     </p>
                     <br>
                     <p class="card-text">
                         <small class="text-muted">
-                            A partir de R$ 311.950,00 à vista
+                            A partir de R$ 200.000,00
                         </small>
                     </p>
                 </div>
             </div>
             <div class="card">
-                <img src="img/bmw/cars/C5_CATALOGO.png" class="card-img-top" alt="...">
+                <img src="img/mercedes/cars/C5_CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
-                        BMW Série 5 Sedã
+                        GLS
                     </h5>
                     <p class="card-text">
-                        O BMW Série 5 é a personificação do sedã executivo. Graças à sua 
-                        imagem dinâmica e elegante, o BMW Série 5 cumpre de forma 
-                        absolutamente convincente todas as exigências de um veículo da 
-                        sua categoria: estética esportiva e Prazer de Dirigir com tecnologia 
-                        de ponta.
+                        O GLS tem presença marcante e imponente. Seu design particular
+                        ressalta sua personalidade SUV sem deixar de lado seu aspecto 
+                        esportivo.
                     </p>
                     <br>
                     <br>
@@ -264,19 +238,18 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/bmw/cars/C6_CATALOGO.png" class="card-img-top" alt="...">
+                <img src="img/mercedes/cars/C6_CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
-                        BMW 8 Series Coupé
+                        Roadster premium
                     </h5>
                     <p class="card-text">
-                        O esportivo de luxo definitivo - o interior moderno e purista do 
-                        novo BMW Série 8 Coupé prova que os contrastes podem complementar-se
-                        de forma perfeita. Materiais de alta qualidade, tecnologias 
-                        inovadoras e inúmeras variações de cores e equipamentos garantem 
-                        uma atmosfera luxuosa e uma aparência de alta qualidade, apesar 
-                        do caráter esportivo característico. Os elegantes elementos e as 
-                        linhas de design claras dirigem-se apenas numa direção: para a frente.
+                        O SLC possui características típicas de um roadster, como um
+                         longo capô, rodas de liga leve de 18" e grades do para-choque
+                          dianteiro baseadas no lendário 300 SL, com aletas cromadas. 
+                          Além disso, pressionando um botão, o teto vario transforma o 
+                          SLC de coupé em um roadster (ou vice-versa) em menos de 20 
+                          segundos.
                     </p>
                     <p class="card-text">
                         <small class="text-muted">
@@ -285,21 +258,20 @@
                     </p>
                 </div>
             </div>
-        </div>
-                
+        </div>     
         <!-- FIM DO CATÁLAGO TODO -->
 
         <!-- COMEÇO DO JUMBOTRON -->
-        <br>
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid" style="background-color: #DCDCDC;">
             <div class="container">
-              <h1 class="display-4">BMW</h1>
-              <p class="lead">Tudo que você precisa está aqui, performace, estilo e segurança.</p>
+              <h1 class="display-4">Mercedes-Benz</h1>
+              <p class="lead">Aqui você encontra o poder máximo de desempenho, desde 1924 trazendo sorrisos aos rostos de nossos clientes.</p>
             </div>
-          </div>
+        </div>
         <!-- FIM DO JUMBOTRON -->
+
         <!-- INICIO DO RODAPÉ -->
-        <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
+        <footer class="page-footer font-small indigo" style="background-color: #DCDCDC; margin-top: -2.5%;">
             <div class="container">
                 <div class="row text-center d-flex justify-content-center pt-5 mb-3">
                     <div class="col-md-2 mb-3">
