--- a/contato.html
+++ b/contato.html
@@ -47,18 +47,8 @@
             </div>
         </nav>
         <!-- FIM DO MENU DA PÁGINA -->
-<<<<<<< HEAD
-        <br>
-        <br>
-        <br>
-        <div class="container">
-        <p>Sla mano qualquer coisa asaeea</p>
-        </div>
-        <br>
-        <br>
-        <br>
-=======
 
+        <!-- INICIO FORMULÁRIO -->
         <div class="container" id="formulario">
             <h1>
                 Fale conosco
@@ -73,8 +63,8 @@
                 <button class="btn btn-primary" type="submit">Enviar</button>
             </form>
         </div>
-        
->>>>>>> 72a7ac672e385f0df33a8b67bb3c50c61ae8467f
+        <!-- FIM FORMULÁRIO -->
+
         <!-- INICIO DO RODAPÉ -->
         <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai;">
             <div class="container">
