--- a/tesla.html
+++ b/tesla.html
@@ -262,16 +262,7 @@
         <!-- FIM DO JUMBOTRON -->
         
         <!-- INICIO DO RODAPÉ -->
-<<<<<<< HEAD
-        <footer class="page-footer font-small indigo" style="background-color: #DCDCDC; margin-top: -2%;" id="desceai">
-            <!-- <br>
-            <br>
-            <br>
-            <br>
-            <br> -->
-=======
-        <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
->>>>>>> 72a7ac672e385f0df33a8b67bb3c50c61ae8467f
+        <footer class="page-footer font-small indigo" style="background-color: #DCDCDC; margin-top: -2%;">
             <div class="container">
                 <div class="row text-center d-flex justify-content-center pt-5 mb-3">
                     <div class="col-md-2 mb-3">
