the last commit

--- a/bmw.html
+++ b/bmw.html
@@ -76,13 +76,6 @@
         <!-- FIM DO SLIDER -->
 
         <!-- INICIO DOS CARDS DE PROMOÇÃO -->
-        <br>
-        <br>
-        <h1 id="title">
-            Veículos em promoção
-        </h1>
-        <br>
-        <br>
         <div class="card-group">
             <div class="card">
                 <img src="img/bmw/cars/C1_CARD-CATALOGO.png" class="card-img-top" alt="...">
@@ -150,6 +143,7 @@
             <source src="img/bmw/cars/VIDEO_BMW.mp4">
         </video>
         <!-- COMEÇO DO CATÁLAGO TODO -->
+        <div class="control">
         <div class="card-group">
             <div class="card">
                 <img src="img/bmw/cars/C1_CARD-CATALOGO.png" class="card-img-top" alt="...">
@@ -282,7 +276,7 @@
                 </div>
             </div>
         </div>
-                
+        </div>        
         <!-- FIM DO CATÁLAGO TODO -->
 
         <!-- COMEÇO DO JUMBOTRON -->
