--- a/bmw.html
+++ b/bmw.html
@@ -276,7 +276,63 @@
                 </div>
             </div>
         </div>
-        </div>        
+        <!-- <FINAL PART 1 CATALOGO -->
+
+        <!-- COMEÇO BANNER -->
+        <img src="img/bmw/cars/C10_BANNER.jpg"
+        <!-- FINAL BANNER -->
+
+        <!-- COMEÇO PART 2 CATALOGO -->
+        <div class="card-group">
+            <div class="card">
+                <img src="img/outras/CarroEmBreve.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                            EM BREVE
+                    </h5>
+                    <p class="card-text">
+                        Em breve mais um veiculo para a loja
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            R$ *.***.***,**
+                        </small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/outras/CarroEmBreve.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                            EM BREVE
+                    </h5>
+                    <p class="card-text">
+                        Em breve mais um veiculo para a loja
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            R$ *.***.***,**
+                        </small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/outras/CarroEmBreve.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        EM BREVE
+                    </h5>
+                    <p class="card-text">
+                        Em breve mais um veiculo para a loja
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            R$ *.***.***,**
+                        </small>
+                    </p>
+                </div>
+            </div>
+        </div>      
         <!-- FIM DO CATÁLAGO TODO -->
 
         <!-- COMEÇO DO JUMBOTRON -->
